# pico-calculator

./: .gitignore  CMakeLists.txt  calculator.c
libcalc/: CMakeLists.txt  arithmetic.c  decimal.c  libcalc.c  libcalc.h
libcalc/include/: arithmetic.h  decimal.h  libcalc.h
pico/: CMakeLists.txt  calculator.c
tests/: CMakeLists.txt  defs.py  dpd.py  math_test.c
tests/pytests/: defs.py  test_dec128packing.py  test_dpd.py  utils.py
